# rt-plot

./: Cargo.toml  LICENSE  README.md
resources/: example-data-config.toml
resources/default/: color_scheme.toml  light_color_scheme.toml
src/: config.rs  main.rs  plot.rs  renderer.rs
src/relay/: main.rs
src/rt-plot/: approximation.rs  config.rs  main.rs  plot.rs  renderer.rs  text.rs
src/rt-plot/shaders/: basic.frag  basic.vert  text.frag  text.vert
src/rt-relay/: main.rs
src/shaders/: basic.frag  basic.vert
